[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/GraphicsMenu.gd" type="Script" id=1]

[node name="GraphicsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphicText" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 40.0
text = "Graphics"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="FullscreenCheckbox" type="CheckBox" parent="."]
margin_top = 48.0
margin_right = 94.0
margin_bottom = 72.0
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VsyncCheckbox" type="CheckBox" parent="."]
anchor_top = 0.1
anchor_bottom = 0.2
margin_top = 52.0
margin_right = 94.0
margin_bottom = 58.0
pressed = true
text = "Vsync"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -12.0
margin_right = 44.0
margin_bottom = -10.0
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="pressed" from="FullscreenCheckbox" to="." method="_on_FullscreenCheckbox_pressed"]
[connection signal="pressed" from="VsyncCheckbox" to="." method="_on_VsyncCheckbox_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_Button_pressed"]
